[package]
name = "aeron-rs"
version = "0.1.2"
authors = ["Denis Komissarov <denisxor@gmail.com>", "Kirill Karbushev <kiriosk@yandex.ru>", "Alexander Ostrovskiy <alexander.ostrovskiy@gmail.com>",]
license = "Apache-2.0"
description = "Aeron client library - fast messaging over UDP on Rust"
readme = "README.md"
repository = "https://github.com/UnitedTraders/aeron-rs"
edition = "2018"

[dependencies]
cache_line_size="1.0.0"
num-traits="0.2.11"
lazy_static = "1.4.0"
memmap = "0.7.0"
rand = "0.6"
nix = "0.17.0"
ctrlc = "3.1.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"
chrono = "0.4.11"

[dev-dependencies]
tempfile = "3.1.0"
hdrhistogram = "6.0"
structopt = "0.3.14"
