[package]
name = "aeron-rs"
version = "0.1.5"
authors = ["Denis Komissarov <denisxor@gmail.com>", "Kirill Karbushev <kiriosk@yandex.ru>", "Alexander Ostrovskiy <alexander.ostrovskiy@gmail.com>",]
license = "Apache-2.0"
description = "Aeron client library - fast messaging over UDP on Rust"
readme = "README.md"
repository = "https://github.com/UnitedTraders/aeron-rs"
edition = "2018"

[dependencies]
thiserror = "1.0"
cache_line_size="1.0"
num-traits="0.2"
lazy_static = "1.4"
memmap = "0.7"
rand = "0.6"
nix = "0.17"
ctrlc = "3.1"
log = "0.4"
pretty_env_logger = "0.4"
galvanic-assert = "0.8"
chrono = "0.4"
memoffset = "0.6.4"

[dev-dependencies]
tempfile = "3.1"
hdrhistogram = "6.0"
structopt = "0.3"

[build-dependencies]
rustc_version   = "0.3"
